--- a/index.html
+++ b/index.html
@@ -1,1 +1,51 @@
-"Nona" 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <title>🌱Nona.css - Homegrown CSS Framework</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="theme-color" content="#39AF6B">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto&amp;subset=latin-ext">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/10up-sanitize.css/5.0.0/sanitize.min.css">
+    <link rel="stylesheet" href="0.3.0/nona.css">
+    <link rel="stylesheet" href="main.css" />
+</head>
+<body>
+    <section class="menu">
+        <nav class="navbar">
+            <div class="right">
+                    <img src="nona-logo.svg" alt="🌱Nona">
+                    <a class="button button-clear" href="#">Nona</a>
+                    <a class="button button-clear" href="#">Documentation</a>
+            </div>
+            <div class="left">
+                <a class="button button-round" href="#"><i class="fab fa-github"></i> Github</a>
+            </div>
+        </nav>
+    </section>
+    <section class="banner">
+        <div class="hero hero-75">
+            <div class="content">
+                <h1>Nona</h1>
+                <blockquote>🌱Homegrown CSS Framework</blockquote>
+                <a class="button button-round" href="#">Get Started</a>
+            </div>
+        </div>
+    </section>
+    <section class="install section-padding">
+        <div class="container">
+            <div class="row">
+                <div class="column">
+                    <p>
+                        <span class="text-accent">Installation</span>
+                    </p>
+                    <pre>   
+  &lt;link rel="stylesheet" href="path-to/<a href="#">nona.css</a>"&gt;
+                    </pre>
+                </div>
+            </div>
+        </div>
+    </section>
+</body>
+</html>
