Add typography section

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>🌱Nona.css - Homegrown CSS Framework</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#39AF6B">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto&amp;subset=latin-ext">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open Sans">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/10up-sanitize.css/5.0.0/sanitize.min.css">
     <link rel="stylesheet" href="0.3.0/nona.css">
@@ -15,21 +15,21 @@
     <section class="menu">
         <nav class="navbar">
             <div class="right">
-                    <img src="nona-logo.svg" alt="🌱Nona">
-                    <a class="button button-clear" href="#">Nona</a>
-                    <a class="button button-clear" href="#">Documentation</a>
+                <a href="/"><img src="nona-logo.svg" alt="🌱Nona"></a>
             </div>
             <div class="left">
-                <a class="button button-round" href="#"><i class="fab fa-github"></i> Github</a>
+                <a class="button" href="https://github.com/AlterRegalia/nona" target="_blank"><i class="fab fa-github"></i> Github</a>
             </div>
         </nav>
     </section>
     <section class="banner">
-        <div class="hero hero-75">
-            <div class="content">
-                <h1>Nona</h1>
-                <blockquote>🌱Homegrown CSS Framework</blockquote>
-                <a class="button button-round" href="#">Get Started</a>
+        <div class="hero">
+            <div class="row">
+                <div class="column">
+                    <h1>Nona</h1>
+                    <p>Simplified CSS Framework</p>
+                    <a class="button button-clear" href="#">Get Started</a>
+                </div>
             </div>
         </div>
     </section>
@@ -37,12 +37,52 @@
         <div class="container">
             <div class="row">
                 <div class="column">
-                    <p>
-                        <span class="text-accent">Installation</span>
-                    </p>
+                    <span class="text-accent">Clone</span>
+                    <pre>   
+  git clone <span class="text-accent">https://github.com/AlterRegalia/nona.git</span>
+                    </pre>
+                </div>
+            </div>
+            <div class="row">
+                <div class="column">
+                    <span class="text-accent">Installation</span>
                     <pre>   
   &lt;link rel="stylesheet" href="path-to/<a href="#">nona.css</a>"&gt;
                     </pre>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="typography">
+        <div class="container">
+            <div class="row">
+                <div class="column">
+                    <span class="text-accent">Typography</span>
+                </div>
+            </div>
+            <div class="row">
+                <div class="column">
+                    <h1>Heading <code>&lt;h1&gt;</code></h1>
+                    <h2>Heading <code>&lt;h2&gt;</code></h2>
+                    <h3>Heading <code>&lt;h3&gt;</code></h3>
+                    <h4>Heading <code>&lt;h4&gt;</code></h4>
+                    <h5>Heading <code>&lt;h5&gt;</code></h5>
+                    <h6>Heading <code>&lt;h6&gt;</code></h6>
+                </div>
+            </div>
+            <div class="row">
+                <div class="column">
+                    <p>paragraph <code>&lt;p&gt;</code></p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Pellentesque pulvinar pellentesque habitant morbi tristique senectus et. Cras sed felis eget velit aliquet sagittis. Sit amet justo donec enim diam vulputate ut pharetra. Egestas diam in arcu cursus. In nulla posuere sollicitudin aliquam ultrices. Donec massa sapien faucibus et molestie ac feugiat sed lectus. Sociis natoque penatibus et magnis dis parturient montes nascetur. Amet purus gravida quis blandit. Id neque aliquam vestibulum morbi blandit cursus risus.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="grid section-padding">
+        <div class="container">
+            <div class="row">
+                <div class="column">
+                    <span class="text-accent">Grid System</span>
                 </div>
             </div>
         </div>
