Add button section

--- a/index.html
+++ b/index.html
@@ -53,6 +53,50 @@
             </div>
         </div>
     </section>
+    <section class="buttons">
+        <div class="container">
+            <div class="row">
+                <div class="column">
+                    <span class="text-accent">Button</span>
+                </div>
+            </div>
+            <div class="row mobile align-center text-center">
+                <div class="column">
+                    <button>Button</button>
+                </div>
+                <div class="column">
+                    <button class="button-round">Button</button>
+                </div>
+                <div class="column">
+                    <button class="button-clear">Button</button>
+                </div>
+            </div>
+            <div class="row mobile align-center text-center">
+                <div class="column">
+                    <button class="button-outline">button</button>
+                </div>
+                <div class="column">
+                    <button class="button-outline button-round">Button</button>
+                </div>
+                <div class="column">
+                    <button disabled="disabled">Button</button>
+                </div>
+            </div>
+            <div class="row">
+                <div class="column">
+                    <pre>   
+    &lt;a class="<span class="text-accent">button</span>"&gt;
+        <em>Button</em>
+    &lt;/a&gt;
+
+    &lt;button class="<span class="text-accent">button-round</span>"&gt;
+        <em>Button</em>
+    &lt;/button&gt;
+                    </pre>
+                </div>
+            </div>
+        </div>
+    </section>
     <section class="typography">
         <div class="container">
             <div class="row">
@@ -102,32 +146,32 @@
             <div class="row">
                 <div class="column">
                     <pre>   
-  &lt;div class="<span class="text-accent">row</span>"&gt;
-    &lt;div class="<span class="text-accent">column</span>"&gt;
-        <em>column</em>
-    &lt;/div&gt;    
-  &lt;/div&gt;
+    &lt;div class="<span class="text-accent">row</span>"&gt;
+        &lt;div class="<span class="text-accent">column</span>"&gt;
+            <em>column</em>
+        &lt;/div&gt;    
+    &lt;/div&gt;
 
-  &lt;div class="<span class="text-accent">row</span>"&gt;
-    &lt;div class="<span class="text-accent">column</span>"&gt;
-        <em>column</em>
+    &lt;div class="<span class="text-accent">row</span>"&gt;
+        &lt;div class="<span class="text-accent">column</span>"&gt;
+            <em>column</em>
+        &lt;/div&gt;    
+        &lt;div class="<span class="text-accent">column</span>"&gt;
+            <em>column</em>
+        &lt;/div&gt;    
     &lt;/div&gt;    
-    &lt;div class="<span class="text-accent">column</span>"&gt;
-        <em>column</em>
-    &lt;/div&gt;    
-  &lt;/div&gt;    
   
-  &lt;div class="<span class="text-accent">row</span>"&gt;
-    &lt;div class="<span class="text-accent">column</span>"&gt;
-        <em>column</em>
+    &lt;div class="<span class="text-accent">row</span>"&gt;
+        &lt;div class="<span class="text-accent">column</span>"&gt;
+            <em>column</em>
+        &lt;/div&gt;    
+        &lt;div class="<span class="text-accent">column</span>"&gt;
+            <em>column</em>
+        &lt;/div&gt;    
+        &lt;div class="<span class="text-accent">column</span>"&gt;
+            <em>column</em>
+        &lt;/div&gt;    
     &lt;/div&gt;    
-    &lt;div class="<span class="text-accent">column</span>"&gt;
-        <em>column</em>
-    &lt;/div&gt;    
-    &lt;div class="<span class="text-accent">column</span>"&gt;
-        <em>column</em>
-    &lt;/div&gt;    
-  &lt;/div&gt;    
                     </pre>
                 </div>
             </div>
