Update grid section

--- a/index.html
+++ b/index.html
@@ -224,6 +224,48 @@
                     </pre>
                 </div>
             </div>
+            <div class="row">
+                <div class="column column-66 show">column-66</div>
+            </div>
+            <div class="row">
+                <div class="column">
+                    <pre>   
+    &lt;div class="<span class="text-accent">row</span>"&gt;
+        &lt;div class="<span class="text-accent">column column-66</span>"&gt;
+            <em>column-66</em>
+        &lt;/div&gt;    
+    &lt;/div&gt;
+                    </pre>
+                </div>
+            </div>
+            <div class="row">
+                <div class="column column-75 show">column-75</div>
+            </div>
+            <div class="row">
+                <div class="column">
+                    <pre>   
+    &lt;div class="<span class="text-accent">row</span>"&gt;
+        &lt;div class="<span class="text-accent">column column-75</span>"&gt;
+            <em>column-75</em>
+        &lt;/div&gt;    
+    &lt;/div&gt;
+                    </pre>
+                </div>
+            </div>
+            <div class="row">
+                <div class="column column-100 show">column-100</div>
+            </div>
+            <div class="row">
+                <div class="column">
+                    <pre>   
+    &lt;div class="<span class="text-accent">row</span>"&gt;
+        &lt;div class="<span class="text-accent">column column-100</span>"&gt;
+            <em>column-66</em>
+        &lt;/div&gt;    
+    &lt;/div&gt;
+                    </pre>
+                </div>
+            </div>
         </div>
     </section>
 </body>
