Add form section

--- a/index.html
+++ b/index.html
@@ -131,14 +131,14 @@
                     <span>Flexible Column</span>
                 </div>
             </div>
-            <div class="row">
+            <div class="row text-center">
                 <div class="column show">column</div>
             </div>
-            <div class="row">
+            <div class="row text-center">
                 <div class="column show">column</div>
                 <div class="column show">column</div>
             </div>
-            <div class="row mobile">
+            <div class="row mobile text-center">
                 <div class="column show">column</div>
                 <div class="column show">column</div>
                 <div class="column show">column</div>
@@ -264,6 +264,43 @@
         &lt;/div&gt;    
     &lt;/div&gt;
                     </pre>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="Form section-padding">
+        <div class="container">
+            <div class="row">
+                <div class="column">
+                    <span class="text-accent">Form</span>
+                </div>
+            </div>
+            <div class="row">
+                <div class="column">
+                    <form>
+                        <fieldset>
+                            <label>Name</label>
+                            <input type="text" placeholder="Your Name">
+                            <label>Email</label>
+                            <input type="email" placeholder="Your.Email@domain.com">
+                            <label>Date</label>
+                            <input type="date">
+                            <label>Selection</label>
+                            <select>
+                                <option>Item A</option>
+                                <option>Item B</option>
+                                <option>Item C</option>
+                            </select>
+                            <label>Post</label>
+                            <textarea placeholder="Type Here"></textarea>
+                            <div>
+                                <input type="checkbox">
+                                <label class="label-inline">This is checkbox</label>
+                            </div>
+                            <br>
+                            <input class="button button-primary" type="submit">
+                        </fieldset>
+                    </form>
                 </div>
             </div>
         </div>
